# rust-moneyflow-api

./: .env  Cargo.toml
devtools/: docker-compose.yml
migrations/: 20251115022926_create_user_table.sql  20251115032946_create_categories_tables.sql  20251116021518_create_transaction_table.sql
src/: main.rs
src/controller/: auth.rs  me.rs  mod.rs
src/db/: user.rs
src/middleware/: auth.rs
