[package]
name = "moneyflow"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
bcrypt = "0.17.1"
dotenvy = "0.15.7"
jsonwebtoken = "10.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8", features = [ "runtime-tokio" ,"tls-rustls","postgres","chrono","bigdecimal"] }
tokio = { version = "1.48.0", features = ["full"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
